2009-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.5 ========================
	* 

2008-11-23  Ruediger Haertel <r_haertel@gmx.de>

	* widget_calendar.man: added documentation to widget::calendar

2008-11-23  Ruediger Haertel <r_haertel@gmx.de>

	* widget.man: added widget::calendar and widget::dateentry
	to the overview of snidgets in this package

2008-11-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl: widget::calendar 0.9 ; widget::dataentry 0.91
	* calendar.tcl: new widget::calendar adapted from the dateentry
	dropbox pieces.  Now can be used as a stand-alone widget.
	* dateentry.tcl: update to use calendar widget in dropbox.

2008-11-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl: add widget::dateentry 0.9
	* dateentry.tcl: first pass at a dateentry dropbox, by Ruediger
	Haertel with updates from JH.

2008-06-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl: bump panelframe to 1.1.
	* panelframe.tcl: handle the case of empty color names (occurs on
	OS X) for use of fg/bg.

2008-02-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl: bump widget::screenruler to 1.2
	* ruler.tcl (C-showgeometry): prevent entry input from triggering
	the toplevel bindings.

2007-06-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl: update to 1.2, actual API changes (matched closer
	to toolbar), but they were not documented previously.  The core
	API remains and should be compatible with most standard use cases.
	Remove fallback sizegrip image usage, requires ttk::sizegrip now.
	update option handling with latest snit features.

	* toolbar.tcl (add): update to 1.2
	update option handling with latest snit features.
	Pass -pad to frame.
	Rename 'itemidentify' to 'itemid'.

	* stext.tcl (new): example adaptation of scrolledwindow to create
	a scrolledtext widget.

	* ruler.tcl: update to 1.1
	Correct zoom menu to show proper label.
	update option handling with latest snit features.
