@@ -16,7 +16,7 @@ if {![llength [info commands ::tcl::pkgindex]]} {
 if {![package vsatisfies [package provide Tcl] 8.4]} {return}
 ::tcl::pkgindex $dir widget::all 1.2 {
     widget			3.0	widget.tcl
-    widget::calendar		0.9	calendar.tcl
+    widget::calendar		0.91	calendar.tcl
     widget::dateentry		0.91	dateentry.tcl
     widget::dialog		1.3	dialog.tcl
     widget::menuentry		1.0	mentry.tcl
